--- a/gc.css
+++ b/gc.css
@@ -234,6 +234,22 @@ text {
     font-size: 20px;
 }
 
+#current-describe {
+    position:relative;
+    float:left;
+    margin:5px auto;
+}
+
+.current-describe p {
+    font-family: 'Fauna One', serif;
+    font-size: 12px;
+    line-height:180%;
+}
+
+.current-describe li {
+    font-family: 'Fauna One', serif;
+    font-size: 10px;
+}
 .text {
     font-family: 'Fauna One', serif;
     font-size: 15px;
