--- a/compare.css
+++ b/compare.css
@@ -35,6 +35,26 @@ circle {
     cursor: pointer;
 }
 
+.node {
+    cursor: pointer;
+}
+
+.node circle {
+    fill: #fff;
+    stroke: steelblue;
+    stroke-width: 3px;
+}
+
+.node text {
+    font: 12px sans-serif;
+}
+
+.link {
+    fill: none;
+    stroke: #ccc;
+    stroke-width: 2px;
+}
+
 
 .root circle {
     fill: #000000;
@@ -134,7 +154,7 @@ text {
 }
 .text {
     font-family: 'Fauna One', serif;
-    font-size: 15px;
+    font-size: 10px;
     pointer-events: none;
 }
 
